--- a/css/mobile.css
+++ b/css/mobile.css
@@ -62,6 +62,7 @@
   #container-2 {
     flex-direction: column;
     gap: 30px;
+    overflow: hidden;
   }
 
   .container-2-box {
@@ -72,6 +73,7 @@
     backdrop-filter: blur(3.6px);
     -webkit-backdrop-filter: blur(3.6px);
     border: 1px solid rgba(255, 255, 255, 0.06);
+    overflow: hidden;
   }
 
   .container-2-box img {
