--- a/css/style.css
+++ b/css/style.css
@@ -98,7 +98,7 @@ main {
 #container-1 img {
   height: 250px;
   width: 250px;
-  border: 2px solid white;
+  border: 2px solid black;
   border-radius: 50%;
 }
 
