--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,7 @@
 
 html {
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 
 /* Website structure */
@@ -249,8 +250,10 @@ main {
   justify-content: space-between;
   align-items: center;
   width: 22vw;
-  height: auto;
   gap: 10px;
+
+  max-height: auto;
+  transition: max-height 0.5s ease; /* Smooth transition for height */
 
   background: #6eabda70;
   border-radius: 16px;
@@ -275,6 +278,7 @@ main {
     background: #6eacda;
   }
 }
+
 .container-3-box p {
   line-height: 2;
 }
@@ -307,6 +311,7 @@ main {
     cursor: pointer;
   }
 }
+
 .container-3-box .extra-content {
   height: 0; /* Start collapsed */
   overflow: hidden; /* Hide overflow when collapsed */
@@ -314,8 +319,47 @@ main {
 }
 
 .extra-content {
+  display: flex;
+  flex-direction: column;
   margin-top: 10px;
   line-height: 1.5;
+  gap: 20px;
+  height: auto;
+}
+
+.extra-content.expanded {
+  /* Limit the expanded height */
+  height: 200px;
+  overflow-y: auto; /* Enable vertical scrolling for content */
+}
+
+.logos img {
+  height: 100px;
+  width: 100px;
+}
+
+.logos {
+  display: flex;
+  flex-direction: column;
+}
+
+.size-info-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.size-info {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  width: 45%;
+}
+
+hr {
+  border: 5px solid #03346e;
 }
 
 .container-3-box button {
@@ -329,6 +373,28 @@ main {
   height: 150px;
   border-radius: 25px;
   width: 100%;
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 20px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px grey;
+  border-radius: 10px;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: #03346e;
+  border-radius: 10px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  background: #021526;
 }
 
 #container-3-boxes-dack {
