--- a/css/style.css
+++ b/css/style.css
@@ -91,7 +91,7 @@ main {
   align-items: center;
   gap: 20px;
   width: 100vw;
-  height: 85vh;
+  min-height: 85vh;
   overflow: hidden; /* Prevents overflow issues */
 }
 
@@ -132,7 +132,7 @@ main {
   font-size: 1.3rem;
   z-index: 3; /* Ensures the text is above both the video and overlay */
   line-height: 1.5;
-  height: 100%;
+  height: 85vh;
   gap: 20px;
 }
 
